; ModuleID = '/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-utils.c_tl_string_buffer_to_cstr.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/TL/extr_tl-utils.c_tl_string_buffer_to_cstr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tl_buffer = type { i64, i32, i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @tl_string_buffer_to_cstr(%struct.tl_buffer* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.tl_buffer*, align 8
  %4 = alloca i8*, align 8
  store %struct.tl_buffer* %0, %struct.tl_buffer** %3, align 8
  %5 = load %struct.tl_buffer*, %struct.tl_buffer** %3, align 8
  %6 = getelementptr inbounds %struct.tl_buffer, %struct.tl_buffer* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i8* @cstr_dup(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i8* %10, i8** %2, align 8
  br label %32

11:                                               ; preds = %1
  %12 = load %struct.tl_buffer*, %struct.tl_buffer** %3, align 8
  %13 = getelementptr inbounds %struct.tl_buffer, %struct.tl_buffer* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 8
  %15 = add nsw i32 %14, 1
  %16 = call i8* @tl_zzmalloc(i32 %15)
  store i8* %16, i8** %4, align 8
  %17 = load i8*, i8** %4, align 8
  %18 = load %struct.tl_buffer*, %struct.tl_buffer** %3, align 8
  %19 = getelementptr inbounds %struct.tl_buffer, %struct.tl_buffer* %18, i32 0, i32 2
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.tl_buffer*, %struct.tl_buffer** %3, align 8
  %22 = getelementptr inbounds %struct.tl_buffer, %struct.tl_buffer* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @memcpy(i8* %17, i32 %20, i32 %23)
  %25 = load i8*, i8** %4, align 8
  %26 = load %struct.tl_buffer*, %struct.tl_buffer** %3, align 8
  %27 = getelementptr inbounds %struct.tl_buffer, %struct.tl_buffer* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds i8, i8* %25, i64 %29
  store i8 0, i8* %30, align 1
  %31 = load i8*, i8** %4, align 8
  store i8* %31, i8** %2, align 8
  br label %32

32:                                               ; preds = %11, %9
  %33 = load i8*, i8** %2, align 8
  ret i8* %33
}

declare dso_local i8* @cstr_dup(i8*) #1

declare dso_local i8* @tl_zzmalloc(i32) #1

declare dso_local i32 @memcpy(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
